<resources>
    <string name="app_name">Progress Pal</string>

    <!--Generic Strings-->
    <string name="cancel_btn">Cancel</string>


    <!--Appbar Menu-->
    <string name="action_home">Home</string>
    <string name="action_help">Help</string>
    <string name="action_terms">Terms</string>
    <string name="action_courses">Courses</string>
    <string name="action_assessments">Assessments</string>

    <!--Home Page-->
    <string name="home_title">@string/app_name</string>
    <string name="home_instructions">Select an option to create, view, or edit:</string>
    <string name="term_button_text">Terms</string>
    <string name="course_button_text">Courses</string>
    <string name="assessment_button_text">Assessments</string>
    <string name="title_activity_view_terms">ViewTermsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_view_courses">ViewCoursesActivity</string>
    <string name="title_activity_view_assessments">ViewAssessmentsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--modify screen text-->
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>

    <!-- Modify Term-->
    <string name="term_label">Term Name: </string>
    <string name="save_term_btn">Save Term</string>
    <string name="term_course_label">Courses in this Term</string>
    <string name="add_course">ADD NEW COURSE</string>

    <!--Modify Course-->
    <string name="course_label">Course Name: </string>
    <string name="save_course_btn">Save Course</string>
    <string name="select_term_label">Select Term</string>
    <string name="progress_label">Select Progress</string>
    <string name="add_course_instructor">Add Instructor</string>
    <string name="course_instructor_label">Course Instructors</string>
    <string name="course_assessment_label">Course Assessments</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="course_note_label">Course Notes</string>
    <string name="add_note">Add Note</string>

    <!--Modify Assessment-->
    <string name="assessment_name">Assessment Name</string>
    <string name="assessment_course_label">Select Course: </string>
    <string name="assessment_type_label">Select Type: </string>
    <string name="save_assessment_btn">Save Assessment</string>

    <!--Modify Instructor-->
    <string name="instructor_name_label">Instructor \nName:</string>
    <string name="instructor_phone_label">Phone \nNumber:</string>
    <string name="instructor_email_label">Email:</string>
    <string name="instructor_save_button">Save</string>

    <!--Note Fragment-->
    <string name="note_name">Title: </string>
    <string name="note_label">Note Contents</string>

    <!--SMS Fragment-->
    <string name="sms_title">Share Note</string>
    <string name="sms_phone_label">Phone Number: </string>
    <string name="sms_message_label">Note</string>
    <string name="sms_share_btn">Share Note</string>


</resources>