<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ModifyCourseActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/entityNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="TextView" />

        <EditText
            android:id="@+id/editEntityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/horizontal_linear">

        <TextView
            android:id="@+id/termLabel"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_term_label" />

        <Spinner
            android:id="@+id/termSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    </LinearLayout>

    <fragment
        android:name="storper.matt.c196_progress_pal.Fragments.TempDateFragment"
        android:id="@+id/dateFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/horizontal_linear">

        <TextView
            android:id="@+id/progressLabel"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/progress_label" />

        <Spinner
            android:id="@+id/progressSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course_instructor_label" />

    <Button
        android:id="@+id/addInstructorBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_course_instructor" />

    <Button
        android:id="@+id/saveCourseBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_course_btn" />

</LinearLayout>