<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/smsTitle"
        android:layout_width="wrap_content"
        style="@style/label"
        android:text="@string/sms_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/smsPhoneLabel"
        style="@style/label"
        android:layout_width="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/sms_phone_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smsTitle" />

    <EditText
        android:id="@+id/editSmsPhone"
        style="@style/inputObject"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="@+id/smsPhoneLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/smsPhoneLabel"
        app:layout_constraintTop_toTopOf="@+id/smsPhoneLabel" />

    <TextView
        android:id="@+id/smsMessageLabel"
        style="@style/label"
        android:layout_width="120dp"
        android:layout_marginTop="8dp"
        android:text="@string/sms_message_label"
        app:layout_constraintStart_toStartOf="@+id/smsPhoneLabel"
        app:layout_constraintTop_toBottomOf="@+id/smsPhoneLabel" />

    <EditText
        android:id="@+id/editSmsMessage"
        style="@style/inputObject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/editSmsPhone"
        app:layout_constraintStart_toStartOf="@+id/smsMessageLabel"
        app:layout_constraintTop_toBottomOf="@+id/smsMessageLabel" />

    <Button
        android:id="@+id/sendSmsBtn"
        style="@style/modifyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/sms_share_btn"
        app:layout_constraintEnd_toEndOf="@+id/editSmsMessage"
        app:layout_constraintTop_toBottomOf="@+id/editSmsMessage" />

</androidx.constraintlayout.widget.ConstraintLayout>