<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="false"
    android:layout_centerHorizontal="false"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Activities.ModifyTermActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">

      <TextView
          android:id="@+id/entityNameLabel"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="2.5"
          android:text="TextView" />

      <EditText
          android:id="@+id/editEntityName"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:ems="10"
          android:inputType="textPersonName"
          android:text="" />

   </LinearLayout>

   <fragment
       android:id="@+id/dateFragment"
       android:name="storper.matt.c196_progress_pal.Fragments.TempDateFragment"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" />

   <Button
       android:id="@+id/saveTermBtn"
       android:layout_width="250dp"
       android:layout_height="60dp"
       android:text="@string/save_term_btn"
       android:layout_gravity="center_horizontal"/>

   <TextView
       android:id="@+id/editTextTextPersonName"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:ems="10"
       android:text="@string/term_course_label" />

   <androidx.fragment.app.FragmentContainerView
       android:id="@+id/fragmentContainerView"
       android:name="storper.matt.c196_progress_pal.Fragments.ListFragment"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" />

   <Button
       android:id="@+id/add_course_btn"
       android:layout_width="250dp"
       android:layout_height="60dp"
       android:text="@string/add_course"
       android:layout_gravity="center_horizontal"
      />


</LinearLayout>