<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
        android:id="@+id/instructorTitle"
        style="@style/title.primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/nameLabel"
        style="@style/label"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:text="@string/instructor_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructorTitle" />

    <EditText
        android:id="@+id/editInstructorName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="Name"
        style="@style/inputObject"
        android:inputType="textPersonName"
        android:textColor="@color/secondaryText"
        app:layout_constraintBottom_toBottomOf="@+id/nameLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nameLabel"
        app:layout_constraintTop_toTopOf="@+id/nameLabel" />


    <TextView
        android:id="@+id/phoneLabel"
        style="@style/label"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/instructor_phone_label"
        app:layout_constraintStart_toStartOf="@+id/nameLabel"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

    <EditText
        android:id="@+id/editInstructorPhone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Phone Number"
        android:inputType="phone"
        style="@style/inputObject"
        app:layout_constraintBottom_toBottomOf="@+id/phoneLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/phoneLabel"
        app:layout_constraintTop_toTopOf="@+id/phoneLabel" />


    <TextView
        android:id="@+id/emailLabel"
        style="@style/label"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/instructor_email_label"
        app:layout_constraintStart_toStartOf="@+id/phoneLabel"
        app:layout_constraintTop_toBottomOf="@+id/phoneLabel" />


    <EditText
        android:id="@+id/editInstructorEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        style="@style/inputObject"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/emailLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/emailLabel"
        app:layout_constraintTop_toTopOf="@+id/emailLabel" />


    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/secondary"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/emailLabel"
        app:layout_constraintTop_toBottomOf="@+id/editInstructorEmail"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/saveInstructorBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accent"
        android:text="@string/instructor_save_button"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>